# SysPulse

./: .gitignore  README.md  metrics_history.csv  pyproject.toml  requirements.txt
cli/: main.py
collectors/: base.py  cpu.py  disk.py  memory.py  processes.py
core/: agent.py  config.py  decorators.py  events.py  http_client.py  scheduler.py
storage/: base.py  cloud_storage.py  csv_storage.py  memory_storage.py
tests/: test.py
utils/: cloud_viewer.py  reader.py
web/: dash.py
