[project]
name = "syspulse"
version = "0.2.0"
description = "Modular system monitoring tool for Windows"
authors = [
    { name = "Alex Demchenko" }
]
requires-python = ">=3.10"

dependencies = [
    "psutil",
    "click",
    "streamlit",
    "pandas",
    "tabulate"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
syspulse = "cli.main:main"